JumpScript/tests/baselines/reference/parseErrorInHeritageClause1.errors.txt
tests/cases/compiler/parseErrorInHeritageClause1.jump(1,17): error TS2304: Cannot find name 'A'.
tests/cases/compiler/parseErrorInHeritageClause1.jump(1,19): error TS1127: Invalid character.


==== tests/cases/compiler/parseErrorInHeritageClause1.jump (2 errors) ====
    class C extends A # {
                    ~
!!! error TS2304: Cannot find name 'A'.
                      
!!! error TS1127: Invalid character.
    }